--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,37 +5,6 @@
     android:background="#d1eeee"
     >
 
-    <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="37dp"
-        android:background="@drawable/border"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
-        <EditText
-            android:id="@+id/userId"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:imeOptions="actionDone"
-            android:textSize="16sp"
-            android:ems="10"
-            android:hint="景点"
-            >
-        </EditText>
-
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="3dp"
-
-            />
-    </LinearLayout>
-
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -77,6 +46,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:onClick="navi"
             android:id="@+id/llFriends"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -291,7 +261,41 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="37dp"
+        android:background="@drawable/border"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/viewPager"
+        android:layout_centerHorizontal="true">
+        <EditText
+            android:id="@+id/key"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:imeOptions="actionDone"
+            android:textSize="16sp"
+            android:ems="10"
+            android:hint="景点"
+            >
+        </EditText>
+<LinearLayout
+    android:layout_width="30dp"
+    android:layout_height="30dp">
+        <ImageView
+            android:onClick="search"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:background="@drawable/search"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            />
 
+</LinearLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
